# ZuruPipelineTest

./: README.md
Maya Test/Custom Plugin & Script Methods/Method1- PYTHONPATH Environment Variable/: README.md  custom_setup.py
Maya Test/Custom Plugin & Script Methods/Method2- Maya Module System/: README.md
Maya Test/Custom Plugin & Script Methods/Method2- Maya Module System/maya_modules/: custom_module.mod
Maya Test/Custom Plugin & Script Methods/Method3- Batch Script On Maya Launch/: README.md  custom_maya_start.bat
Maya Test/Maya QT/Test1/: README.md  maya_QT_window.py
Maya Test/OM & Commands/Test1/: README.md  maya_script.py
Maya Test/OM & Commands/Test2/: README.md  maya_OM_Script.py  om_cmds_undo_script.py
Maya Test/OM & Commands/Test3/: README.md  maya_namespace_remover.py
PythonTest/: README.md  pyls.py  pyproject.toml  setup.py
PythonTest/pyls/: pyls.py
